nashorn/test/script/basic/JDK-8019553.js.EXPECTED
SyntaxError:33:Expected l-value but found +
++ +3
   ^
SyntaxError:33:Expected l-value but found -
++ -7
   ^
SyntaxError:33:Expected l-value but found +
-- +2
   ^
SyntaxError:33:Expected l-value but found -
-- -8
   ^
